--- a/start/01_03_vegetarian_dinner.html
+++ b/start/01_03_vegetarian_dinner.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- To run this file right click the file in the navigation bar and select "Open with live server. Then open the developer tools in the browser and head to the console window."-->
-
+  <ul id="menu"></ul>
   <!-- Use this element to render your menu -->
   <ul id="menu"></ul>
 
@@ -33,8 +33,20 @@
         isVegetarian: true
       }
     ]
+
+    let filtered = menu.filter((x)=> {
+     return x.isVegetarian === true;
+    });
+    console.log(filtered);
     // Write your code here
 
+    const menuList = document.getElementById('menu');
+    filtered.forEach(item => {
+        const listItem = document.createElement('li');
+        listItem.textContent = item.name;
+        menuList.appendChild(listItem);
+      });
+      
   </script>
 </body>
 
