--- a/start/01_03_vegetarian_dinner.html
+++ b/start/01_03_vegetarian_dinner.html
@@ -31,6 +31,10 @@
       {
         name: "Tiramisu",
         isVegetarian: true
+      },
+        {
+        name: "madeUpNameTes",
+        isVegetarian: true
       }
     ]
 
@@ -46,7 +50,7 @@
         listItem.textContent = item.name;
         menuList.appendChild(listItem);
       });
-      
+
   </script>
 </body>
 
