--- a/start/01_03_vegetarian_dinner.html
+++ b/start/01_03_vegetarian_dinner.html
@@ -39,7 +39,7 @@
     ]
 
     let filtered = menu.filter((x)=> {
-     return x.isVegetarian === true;
+     return x.isVegetarian === false;
     });
     console.log(filtered);
     // Write your code here
